[package]
name = "rustygate"
version = "0.1.0"
edition = "2024"

[dependencies]
# Actix Web — Serveur HTTP principal
actix-web = "4.5"
actix-rt = "2.10"          # Runtime async pour Actix
actix-http = "3.6"         # Bas niveau HTTP (pour manipuler requests/responses)

# Async / Runtime
tokio = { version = "1.3", features = ["full"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
config = "0.13"

# HTTP Client (pour forwarder vers les backends)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Observabilité
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"  # Intégration tracing + actix-web

# Métriques Prometheus
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# OpenTelemetry (Tracing distribué)
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = "0.13"
tracing-opentelemetry = "0.22"

# Gestion d'erreurs
thiserror = "1.0"
anyhow = "1.0"

# CLI parsing (arguments de lancement)
clap = { version = "4.4", features = ["derive"] }

# Load Balancing & Utils
futures = "0.3"
rand = "0.8"               # Pour load balancing aléatoire si besoin

# Health checks & reload
tokio-util = { version = "0.7", features = ["time"] }
notify = "6.1"             # Pour surveiller les changements de fichier

# Plugins WASM (optionnel)
wasmer = { version = "4.2", optional = true }

[features]
wasm = ["wasmer"]

[dev-dependencies]
# Pour les tests intégration
tokio-test = "0.4"
actix-web = { version = "4.5" }

# Pour les benchmarks
criterion = "0.5"

[[bench]]
name = "proxy_bench"
harness = false

[[test]]
name = "integration"
path = "tests/integrations.rs"